// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CashAmountIndicator component should render a decimal 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 32.4,
        "lineHeight": 58.75,
        "paddingBottom": 2.7,
        "paddingTop": 4.5,
      }
    }
  >
    $
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 52.2,
        "lineHeight": 60.9,
        "paddingBottom": 3.6,
        "paddingTop": 9,
      }
    }
  >
    2
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 32.4,
        "lineHeight": 58.75,
        "paddingBottom": 2.7,
        "paddingTop": 4.5,
      }
    }
  >
    .22
  </Text>
</View>
`;

exports[`the CashAmountIndicator component should render a number 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 32.4,
        "lineHeight": 58.75,
        "paddingBottom": 2.7,
        "paddingTop": 4.5,
      }
    }
  >
    $
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 52.2,
        "lineHeight": 60.9,
        "paddingBottom": 3.6,
        "paddingTop": 9,
      }
    }
  >
    2
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 32.4,
        "lineHeight": 58.75,
        "paddingBottom": 2.7,
        "paddingTop": 4.5,
      }
    }
  >
    .00
  </Text>
</View>
`;

exports[`the CashAmountIndicator component should render accept different sizes 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 25.2,
        "lineHeight": 31.28,
      }
    }
  >
    $
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 42.3,
        "lineHeight": 58.75,
        "paddingBottom": 3.6,
        "paddingTop": 6.3,
      }
    }
  >
    2
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "Colfax-Bold",
        "fontSize": 25.2,
        "lineHeight": 31.28,
      }
    }
  >
    .22
  </Text>
</View>
`;
